<resources>
    <string name="app_name">MapPin</string>

    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ID_text" />
    <string name="user_id">ID</string>
    <string name="user_name">NAME</string>
    <string name="E_mail">メールアドレス</string>
    <string name="user_name1">名前</string>
    <string name="password">パスワード</string>
    <string name="newsign">新規登録</string>
    <string name="login">ログイン</string>
    <string name="time">時間の表示</string>
    <string name="PostText">投稿文の表示</string>
    <string name="smile">笑顔ボタン</string>
    <string name="good">いいねボタン</string>
    <string name="back">戻るボタン</string>
    <string name="text_home">ホーム</string>
    <string name="text_account">アカウント</string>
    <string name="text_notifications">通知</string>
    <string name="menu_settings">設定</string>
    <string name="menu_logout">ログアウト</string>
    <string name="menu_help">ヘルプ</string>
    <string name="nav_header_title">ここにユーザーID</string>
    <string name="nav_header_subtitle">ここにユーザー名</string>
</resources>