<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAcount"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/Create_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Sign Up"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ID_text"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/user_id"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Create_text" />

    <EditText
        android:id="@+id/Name_text"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/user_name1"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ID_text" />

    <EditText
        android:id="@+id/Address_text"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/E_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name_text" />

    <EditText
        android:id="@+id/Password_text"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Address_text" />

    <Button
        android:id="@+id/getIcon_Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#FF5722"
        android:text="作成"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/Icon_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@color/white"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/getIcon_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password_text"
        app:shapeAppearanceOverlay="@style/circular"
        app:srcCompat="@drawable/ic_baseline_person_24"
        app:strokeColor="@android:color/black"
        app:strokeWidth="5dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/Add_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#2196F3"
        android:clickable="true"
        android:contentDescription="TODO"
        android:focusable="true"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/Icon_image"
        app:layout_constraintEnd_toEndOf="@+id/Icon_image"
        app:srcCompat="@drawable/ic_baseline_photo_camera_24" />


</androidx.constraintlayout.widget.ConstraintLayout>